--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=your_service_id
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=your_template_id
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=your_public_key
+
+# Backend API
+NEXT_PUBLIC_API_URL=https://app.credmatrix.ai
